perf: :sparkles: Card Lessons done.
